feat : add Life block section

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -23,5 +23,20 @@
          </div>
          
     </header>
+    <section id="Weblife">
+        <h1>Your life is Webdev</h1>
+        <div class="weblife-text">
+            <p>
+                Whatever the approach to development may be, the final program must satisfy fundamental proporties
+            </p>
+        </div>
+            <button>get started</button>
+           <div class="weblife-icons" >
+            <img src="assets/inst.svg" alt="instagram">
+            <img src="assets/facebook.svg" alt="facebook">
+            <img src="assets/email.svg" alt="email">
+            <img src="assets/youtube.svg" alt="youtube">
+           </div>
+    </section>
 </body>
 </html
