feat : add Community block

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -51,5 +51,30 @@
         </div>
         <img src="assets/contentimage1.svg" alt="photo">
     </section>
+    <section id="community">
+        <div class="community-info">
+            <img src="assets/userpic.svg" alt="avatar">
+            <h3>our community</h3>
+            <p>
+                A hacker is any skilled computer expert that uses their technical knowlage to overcome a problem, 
+                but it can also mean a security hacker in common language
+            </p>
+
+        </div>
+        <div class="community-slider">
+            <div class="community-slider-arrow">
+                <img class="community-slider-arrow-arrow-left" src="assets/arrow-left.svg" alt="left arrow">
+                <p>1</p>
+                <p>/</p>
+                <p>5</p>
+                <img class="community-slider-arrow-arrow-right" src="assets/arrow-right.svg" alt="right arrow">
+            </div>
+            <div class="community-slider-slide" >
+                <img src="assets/Rectangle2.png" alt="photo">
+                <img src="assets/Rectangle3.png" alt="photo">
+                <img class="community-slider-slide-style-img" src="assets/Rectangle4.jpg" alt="photo">
+            </div>
+        </div>
+    </section>
 </body>
 </html
