feat : add Implement block

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -76,5 +76,16 @@
             </div>
         </div>
     </section>
+    <section id="implement">
+        <img src="assets/contentImage2.png" alt="photo">
+        <div class="Implement-info">
+            <h2>Implement right code</h2>
+            <p>
+                These might be considered part of the <strong>programming process,</strong> but often the term software development is used for this larger process
+                 with the term programming, implementation 
+                </p>
+                <button>Learn more</button>
+        </div>
+    </section>
 </body>
 </html
