feat : add Sign-up block

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -87,5 +87,14 @@
                 <button>Learn more</button>
         </div>
     </section>
+    <section id="sig-up">
+        <h2>sign up for our newsletter</h2>
+        <div class="sig-up-email">
+            <input type="email" placeholder="E-mail">
+            <button>
+                <img src="assets/check-icon.svg" alt="icon">
+            </button>
+        </div>
+    </section>
 </body>
 </html
