feat : add Download block

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -96,5 +96,30 @@
             </button>
         </div>
     </section>
+    <section id="download">
+        <h2>
+            Download the App
+        </h2>
+        <p>
+            Machine code was the language of early programs, 
+            written in the instruction set of the particular 
+            machine, often in binary notation.
+        </p>
+        <div class="download-all-btw">
+            <div class="download-all-btw-btw">
+                <button>apple store</button>
+                <div class="download-all-btw-btw-icon">
+                    <img src="assets/apple.svg" alt="apple">
+                </div>
+            </div>
+
+            <div class="download-all-btw-btw">
+                <button>Play Market</button>
+                <div class="download-all-btw-btw-icon">
+                    <img src="assets/android.svg" alt="apple">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html
