feat : add footer

--- a/webdev/index.html
+++ b/webdev/index.html
@@ -121,5 +121,18 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="footer-links">
+            <p>Credits</p>
+            <div class="footer-links-divider"></div>
+            <p>Privacy</p>
+            <div class="footer-links-divider"></div>
+            <p>Our teams</p>
+        </div>
+        <img src="assets/Vector.svg" alt="logo">
+        <div class="footer-copyright">
+            <p>by TonYem for RSS at 2020</p>
+        </div>
+    </footer>
 </body>
 </html
